--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
-                        <span class="stat-number">3.8+</span>
-                        <span class="stat-label">GPA</span>
+                        <span class="stat-number">2</span>
+                        <span class="stat-label">Research Labs</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">900+</span>
-                        <span class="stat-label">Students Taught</span>
+                        <span class="stat-number">100K+</span>
+                        <span class="stat-label">Articles Processed</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">3</span>
-                        <span class="stat-label">Languages</span>
+                        <span class="stat-number">61.9%</span>
+                        <span class="stat-label">Bias Detection Acc.</span>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                             <div class="attention-pattern"></div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/gpt2-from-scratch" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -267,7 +267,7 @@
                             <div class="question-mark">?</div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/neural-qa-system" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -295,7 +295,7 @@
                             <div class="truth-meter"></div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/misinfo-detector" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -325,7 +325,7 @@
                             <div class="search-icon"><i class="fas fa-search"></i></div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/multilingual-search" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -354,7 +354,7 @@
                             <div class="compress-icon"><i class="fas fa-compress-alt"></i></div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/factual-summarizer" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -381,7 +381,7 @@
                             <div class="emotion-wheel"></div>
                         </div>
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/karinozturk/sentiment-dashboard" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
